# customain

./: .gitignore  README.md  junk.json  pyproject.toml
classifiers/authorship/: dataset.py  model.py  predict.py  prepare_data.py  train.py
data/: emails.jsonl  reply_pairs.jsonl
data/_archive/: reply_pairs_json.json
data_processing/: anonymize_pairs.py  clean_pairs.py  extract_pairs.py  filter_pairs.py  format_for_sft.py
ft/: __init__.py  estimate_cost.py  finetuning.py  logging_config.py  run_pipeline.py  step_1_run_ft_jobs.py  step_2_update_experiments.py  step_3_eval_run_ft_models.py  step_4_run_evaluation.py  training_configs.py
ft/evaluation/: core.py  registry.py
ft/evaluation/evaluators/: authorship_classifier.py  base.py  bleu.py  llm_judge.py  meteor.py  semantic_similarity.py
gmail_export/: main.py
gmail_preprocessing_pipeline/: _load_secrets.py  anonymize_pairs.py  clean_pairs.py  export_gmail.py  extract_pairs.py  filter_pairs.py  format_for_dpo.py  format_for_sft.py  run_pipeline.py
scripts/: parse.py
src/mbox_parser/: cleaner.py  models.py  pipeline.py
