[project]
name = "customain"
version = "0.1.0"
description = "Email dataset pipeline"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.92.0",
    "google-api-python-client>=2.193.0",
    "google-auth-httplib2>=0.3.1",
    "google-auth-oauthlib>=1.3.1",
    "openai>=1.0.0",
    "shortuuid",
    "nltk",
    "sentence-transformers",
    "torch>=2.0.0",
    "wandb>=0.25.1",
    "tiktoken>=0.12.0",
]
